--- a/imgui.ini
+++ b/imgui.ini
@@ -4,21 +4,21 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1881,881
+Pos=1745,720
 Size=400,400
 Collapsed=0
 
 [Window][Assets Explorer]
-Pos=371,583
-Size=370,317
+Pos=371,585
+Size=741,315
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000008,0
 
 [Window][Code Editor Window]
-Pos=743,583
-Size=785,317
+Pos=1114,585
+Size=414,315
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000009,0
 
 [Window][Scene Objects List Window]
 Pos=0,56
@@ -34,9 +34,9 @@ DockId=0x00000002,0
 
 [Window][Scene Editor Window]
 Pos=371,56
-Size=1157,525
+Size=1157,527
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][Entities]
 Pos=58,62
@@ -47,7 +47,6 @@ Collapsed=1
 Pos=743,580
 Size=785,320
 Collapsed=0
-DockId=0x0000000B,1
 
 [Window][Do you want to quit?]
 Pos=820,417
@@ -74,14 +73,19 @@ Pos=60,60
 Size=423,126
 Collapsed=0
 
+[Window][Another Window]
+Pos=60,60
+Size=116,135
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
   DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x0F5F40DF
   DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1157,844 Split=Y
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1900,525 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1900,317 Split=X Selected=0x1FC0499E
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=370,325 Selected=0x1FC0499E
-        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=785,325 Selected=0xF2B1FC4A
+    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1528,844 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1157,527 Selected=0x44D9F559
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=0,315 Split=X
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=369,317 CentralNode=1 Selected=0x1FC0499E
+        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=414,317 Selected=0xF2B1FC4A
     DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=370,844 Selected=0xF58E28BB
 
