--- a/imgui.ini
+++ b/imgui.ini
@@ -4,39 +4,34 @@ Size=1900,844
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=1745,720
-Size=400,400
+Pos=806,132
+Size=437,261
 Collapsed=0
 
 [Window][Assets Explorer]
 Pos=371,585
 Size=741,315
 Collapsed=0
-DockId=0x00000008,0
 
 [Window][Code Editor Window]
 Pos=1114,585
 Size=414,315
 Collapsed=0
-DockId=0x00000009,0
 
 [Window][Scene Objects List Window]
 Pos=0,56
 Size=369,844
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][Inspector Window]
 Pos=1530,56
 Size=370,844
 Collapsed=0
-DockId=0x00000002,0
 
 [Window][Scene Editor Window]
 Pos=371,56
 Size=1157,527
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][Entities]
 Pos=58,62
@@ -75,17 +70,11 @@ Collapsed=0
 
 [Window][Another Window]
 Pos=60,60
-Size=116,135
+Size=400,200
 Collapsed=0
 
-[Docking][Data]
-DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000003 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x0F5F40DF
-  DockNode        ID=0x00000004 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000004 SizeRef=1528,844 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=1157,527 Selected=0x44D9F559
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=0,315 Split=X
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=369,317 CentralNode=1 Selected=0x1FC0499E
-        DockNode  ID=0x00000009 Parent=0x00000006 SizeRef=414,317 Selected=0xF2B1FC4A
-    DockNode      ID=0x00000002 Parent=0x00000004 SizeRef=370,844 Selected=0xF58E28BB
+[Window][Yet Another Window]
+Pos=60,60
+Size=400,200
+Collapsed=0
 
