--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 74.51786041259766,
         "position": {
-            "x": 15.854409217834473,
-            "y": 32.03662872314453,
-            "z": 18.8930721282959
+            "x": 19.287960052490234,
+            "y": 34.194671630859375,
+            "z": -11.93102741241455
         },
         "projection": 0,
         "target": {
-            "x": 7.44743537902832,
-            "y": 26.860118865966797,
-            "z": 16.338489532470703
+            "x": 10.43210506439209,
+            "y": 30.627038955688477,
+            "z": -15.515058517456055
         },
         "type": "camera",
         "up": {
@@ -111,15 +111,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -345,15 +345,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -392,15 +392,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -439,15 +439,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -486,15 +486,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -533,15 +533,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -580,15 +580,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -627,15 +627,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -674,15 +674,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -721,15 +721,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -768,15 +768,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -815,15 +815,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -862,15 +862,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -909,15 +909,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -956,15 +956,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1003,15 +1003,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1050,15 +1050,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1097,15 +1097,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1144,15 +1144,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1191,15 +1191,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1238,15 +1238,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1285,15 +1285,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1332,15 +1332,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1379,15 +1379,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1426,15 +1426,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1473,15 +1473,15 @@
         "script_index": "",
         "script_path": "",
         "surface_material": {
-            "DiffuseIntensity": 0.75,
-            "Roughness": 0.6790000200271606,
-            "SpecularIntensity": 0.4560000002384186,
+            "DiffuseIntensity": 0.44600000977516174,
+            "Roughness": 1.0,
+            "SpecularIntensity": 1.0,
             "SpecularTint": {
                 "x": 1.0,
                 "y": 1.0,
                 "z": 1.0
             },
-            "shininess": 0.593999981880188
+            "shininess": 0.0
         },
         "texture_path": "",
         "type": "entity"
@@ -1500,7 +1500,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -1547606448,
+        "id": 0,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
@@ -1537,7 +1537,7 @@
             "y": -0.4959999918937683,
             "z": 1.0
         },
-        "id": -1547606448,
+        "id": 0,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 0,
@@ -1561,7 +1561,7 @@
         "type": "light"
     },
     {
-        "attenuation": 0.009999999776482582,
+        "attenuation": 9.999999747378752e-05,
         "color": {
             "a": 255.0,
             "b": 255.0,
@@ -1574,8 +1574,8 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": -1547606448,
-        "intensity": 1.0,
+        "id": 0,
+        "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
         "name": "",
